--- a/appuser/templates/user/reset_password.html
+++ b/appuser/templates/user/reset_password.html
@@ -1,6 +1,6 @@
 {% extends "user/base.html" %}
-{% block title %}Giriş Yap{% endblock title %}
 {% block content %}
+
 
 
 <style>
@@ -132,37 +132,23 @@ form .d-flex a:hover {
 <div class="container-in py-5">
   <div class="row justify-content-center">
     <div class="col-8" style="margin-left:16.666%;">
-      <form method="POST" class="p-4 border rounded shadow-sm bg-light">
-        {% csrf_token %}
+      <div class="card shadow">
+        <div class="card-body">
+          <h2 class="card-title text-center mb-4">Yeni Şifre Belirle</h2>
 
-        {{ form.non_field_errors }}
-        {% for field in form %}
-          <div class="mb-3">
-            {{ field.label_tag }}
-            {{ field }}
-            {% for error in field.errors %}
-              <div class="text-danger">{{ error }}</div>
-            {% endfor %}
-          </div>
-        {% endfor %}
+          <form method="POST">
+            {% csrf_token %}
+            <div class="mb-3">
+              <label for="password" class="form-label fw-bold">Yeni Şifre</label>
+              <input type="password" name="password" id="password" class="form-control" placeholder="Yeni şifrenizi girin">
+            </div>
 
-        <button type="submit" class="btn btn-primary w-100">Giriş Yap</button>
+            <button type="submit" class="btn btn-primary w-100">Şifreyi Güncelle</button>
+          </form>
 
-        <div class="d-flex justify-content-between mt-3">
-          <a href="/user/register/">Kayıt Ol</a>
-          <a style="margin-left:2em;" href="{% url 'user:request_password_reset' %}">Şifremi Unuttum</a>
         </div>
-
-        {% if messages %}
-          <div class="mt-3">
-            {% for message in messages %}
-              <div class="alert alert-{{ message.tags }}">{{ message }}</div>
-            {% endfor %}
-          </div>
-        {% endif %}
-      </form>
+      </div>
     </div>
   </div>
 </div>
-
 {% endblock content %}
