--- a/need/templates/import_export/import_needs.html
+++ b/need/templates/import_export/import_needs.html
@@ -1,9 +1,76 @@
 {% extends 'need/base.html' %}
 {% block content %}
-<h2>CSV Yükle</h2>
-<form method="post" enctype="multipart/form-data">
-    {% csrf_token %}
-    <input type="file" name="csv_file" accept=".csv" class="form-control mb-3">
-    <button class="btn btn-primary">Yükle ve Önizle</button>
-</form>
+
+<style>
+body {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+.container-in{
+    max-width: 600px;
+  margin: 50px auto;
+  padding: 30px;
+  background-color: #fff;
+  border-radius: 16px;
+  box-shadow: 0 8px 20px rgba(0,0,0,0.1);
+}
+
+
+h2 {
+  text-align: center;
+  color: #4b24e8;
+  margin-bottom: 20px;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+input[type="file"] {
+  padding: 10px 12px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+button {
+  padding: 10px 16px;
+  background-color: #4b24e8;
+  color: white;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+button:hover {
+  background-color: #3a1cc1;
+}
+
+/* Responsive */
+@media (max-width: 600px) {
+  .container {
+    margin: 20px;
+  }
+}
+</style>
+
+<div class="container-in">
+    <h2>CSV Yükle</h2>
+    <form method="post" enctype="multipart/form-data">
+        {% csrf_token %}
+        <input type="file" name="csv_file" accept=".csv" class="form-control mb-3">
+        <button class="btn btn-primary">Yükle ve Önizle</button>
+
+        {% for message in messages %}
+            <div class="alert alert-{{ message.tags }}">
+                {{ message }}
+                </div>
+        {% endfor %}
+    </form>
+<div>
 {% endblock %}
