--- a/need/templates/need/detail.html
+++ b/need/templates/need/detail.html
@@ -75,9 +75,16 @@
 <div class="container py-5">
   {% if need %}
   <div class="row justify-content-center">
-    <div class="col-md-8">
+    <div class="col-8">
       <div class="card shadow-sm border-0">
         <div class="card-body">
+
+    {% for message in messages %}
+        <div class="alert alert-{{ message.tags }}">
+            {{ message }}
+            </div>
+    {% endfor %}
+    
           <h2 class="card-title mb-3">{{ need.name }}</h2>
           <p class="text-muted mb-2"><i class="bi bi-person-fill"></i> <strong>İhtiyaç Sahibi:</strong> {{ need.needy }}</p>
           <p class="text-muted mb-2"><i class="bi bi-tags-fill"></i> <strong>Kategori:</strong> {{ need.kind }}</p>
@@ -183,7 +190,7 @@
   {% else %}
 {% load bootstrap_icons %}
   <div class="row justify-content-center">
-    <div class="col-md-6">
+    <div class="col-6">
       <div class="alert alert-danger text-center">
         <strong>İhtiyaç Bulunamadı!</strong>
       </div>
