--- a/need/templates/need/kind_form.html
+++ b/need/templates/need/kind_form.html
@@ -1,12 +1,69 @@
 {% extends "need/base.html" %}
 {% block content %}
-<div class="container py-5">
+
+<style>
+
+
+.container-in {
+  max-width: 600px;
+  margin: 50px auto;
+  padding: 30px;
+  border-radius: 16px;
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+}
+
+h2 {
+  text-align: center;
+  margin-bottom: 30px;
+  color: #4b24e8;
+}
+
+/* Form stili */
+form p {
+  margin-bottom: 15px;
+}
+
+form label {
+  display: block;
+  font-weight: 600;
+  margin-bottom: 5px;
+  color: #333;
+}
+
+form input[type="text"],
+form input[type="email"],
+form input[type="password"],
+form textarea {
+  width: 100%;
+  padding: 10px 12px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  transition: border-color 0.3s;
+}
+
+form input:focus,
+form textarea:focus {
+  border-color: #4b24e8;
+  outline: none;
+}
+
+
+</style>
+
+
+<div class="container-in py-5">
   <h2>Kind Formu</h2>
   <form method="POST">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit" class="btn btn-success">Kaydet</button>
     <a href="{% url 'need:kind_list' %}" class="btn btn-secondary">İptal</a>
+
+    {% for message in messages %}
+        <div class="alert alert-{{ message.tags }}">
+            {{ message }}
+            </div>
+    {% endfor %}
   </form>
 </div>
 <script>
